Sample Implementation/Network Policies/linkerd-dashboard-svc.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: l5d
  namespace: linkerd
spec:
  selector:
    app: l5d
  type: LoadBalancer
  ports:
  - name: http
    port: 80
  - name: admin
    port: 9990
