Sample Implementation/Network Policies/linkerd-viz.yaml
---
apiVersion: v1
kind: Service
metadata:
  name: linkerd-viz
  namespace: linkerd
  labels:
    name: linkerd-viz
spec:
  type: LoadBalancer
  ports:
  - name: grafana
    port: 80
    targetPort: 3000
  - name: prometheus
    port: 9191
    targetPort: 9191
  selector:
    name: linkerd-viz
