Sample Implementation/Network Policies/devops-allow-ingress-5000-whiltelist-ip2.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api-allow-5000-ip
  namespace: devops
spec:
  podSelector:
    matchLabels:
      role: flaskhello
  policyTypes:
  - Ingress
  - Egress
  ingress:
  - from:
    - ipBlock:
        cidr: 40.118.71.0/16
    - namespaceSelector:
        matchLabels:
          project: devops
    ports:
    - protocol: TCP
      port: 5000
  egress:
  - to:
    - ipBlock:
        cidr: 40.118.71.0/16
    ports:
    - protocol: TCP
      port: 80
