Sample Implementation/Network Policies/devops-allow-ingress-5000.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: api-allow-5000
  namespace: devops
spec:
  podSelector:
    matchLabels:
      app: flaskhello
  ingress:
  - ports:
    - port: 5000
