Sample Implementation/Network Policies/devops-deny-all.yaml
kind: NetworkPolicy
apiVersion: networking.k8s.io/v1
metadata:
  name: default-deny-all
  namespace: devops
spec:
  podSelector: {}
  ingress: []
